# rust-vulkan-playground

./: .gitignore  Cargo.toml  README.adoc
.github/workflows/: build.yaml
assets/: cube.blend  cube.gltf  cube2.gltf
lib/blend-rs/blend-bindgen-rs/: Cargo.toml  README.md
lib/blend-rs/blend-bindgen-rs/src/: lib.rs
lib/blend-rs/blend-inspect-rs/: Cargo.toml  README.md
lib/blend-rs/blend-inspect-rs/src/: lib.rs
lib/blend-rs/blend-inspect-rs/src/analyse/: analysers.rs  mod.rs
lib/blend-rs/blend-inspect-rs/src/parse/: input.rs  mod.rs
lib/blend-rs/blend-macros-rs/: Cargo.toml
lib/blend-rs/blend-macros-rs/src/: lib.rs
lib/blend-rs/blend-rs/: .gitignore  Cargo.toml  README.md  build.rs
lib/blend-rs/blend-rs/examples/: example-3.2.blend  mesh.rs  pbr_textured_cube.rs  simple_mesh.rs
lib/blend-rs/blend-rs/resources/: blender2_9.blend
lib/blend-rs/blend-rs/src/: lib.rs
lib/blend-rs/blend-rs/src/blend/: mod.rs  reader.rs  util.rs
lib/blend-rs/blend-rs/src/blend/reader/: check.rs  mod.rs
lib/blend-rs/blend-rs/src/blend/traverse/: double_linked.rs  mod.rs  named.rs
lib/blend-rs/blend-rs/test/resources/: cube.blend
lib/blend-rs/generator/: Cargo.toml
lib/blend-rs/generator/src/: lib.rs
lib/blender-rs/: Cargo.toml
lib/blender-rs/blender-inspect/: Cargo.toml
lib/blender-rs/blender-inspect/src/: lib.rs
lib/blender-rs/blender-inspect/src/analyse/: analysers.rs  mod.rs
lib/blender-rs/blender-inspect/src/parse/: mod.rs  parsers.rs
lib/blender-rs/blender-inspect/src/reader/: builder.rs  mod.rs
lib/blender-rs/blender-rs/: Cargo.toml  build.rs
lib/blender-rs/blender-rs/src/: lib.rs
lib/blender-rs/blender-rs/src/blender/: mod.rs
lib/blender-rs/generator/: Cargo.toml
lib/blender-rs/generator/src/: lib.rs
lib/blender-rs/src/: lib.rs
lib/blender-rs/src/blend/: mod.rs
lib/blender-rs/src/blend/analyse/: mod.rs
lib/blender-rs/src/blend/parse/: mod.rs
lib/blender-rs/src/blend/reader/: builder.rs  mod.rs
lib/bytecycle/: Cargo.toml
lib/bytecycle/src/: lib.rs
lib/bytecycle/src/transform/: mod.rs  readable.rs  sink.rs  source.rs  transformer.rs  writeable.rs
lib/skyshard/: Cargo.toml
lib/skyshard-blender/: Cargo.toml
lib/skyshard-blender/src/blend/: analyse.rs  mod.rs
lib/skyshard-blender/src/blend/analyse/: input.rs  mod.rs
lib/skyshard-blender/src/blend/parse/: input.rs  mod.rs  parsers.rs
lib/skyshard/skyshard_shaders/: Cargo.toml
lib/skyshard/skyshard_shaders/skyshard_shaders_tests/: Cargo.toml
lib/skyshard/skyshard_shaders/skyshard_shaders_tests/src/: lib.rs
lib/skyshard/skyshard_shaders/src/: lib.rs
lib/skyshard/src/: engine.rs  lib.rs  util.rs
lib/skyshard/src/assets/: gltf.rs  mod.rs
lib/skyshard/src/assets/mesh/: attr.rs  mod.rs
lib/skyshard/src/entity/: mod.rs
lib/skyshard/src/graphics/: camera.rs  mod.rs
lib/skyshard/src/graphics/vulkan/: buffer.rs  device.rs  instance.rs  mem.rs  mod.rs  queue.rs  renderpass.rs  shaders.rs  surface.rs  swapchain.rs  util.rs
lib/skyshard/src/graphics/vulkan/resources/: buffer.rs  copy.rs  descriptors.rs  image.rs  mod.rs
shaders/: compute.comp  example.triangle.vert  shader.frag  shader.vert  tesslation-control.tesc
shaders/examples/: fragmet.frag  vertext.vert
src/: blend.rs  clock.rs  input.rs  main.rs  movable.rs  noise.rs  shaders.rs  texture-small.kra  texture.kra
src/blend/: analyse.rs  mod.rs  parse.rs
src/blend/parse/: input.rs  mod.rs  parsers.rs
