[package]
name = "rust-vulkan-playground"
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
edition = "2021"

[workspace]
members = [
    "lib/blend-rs/blend-rs",
    "lib/blend-rs/blend-inspect-rs",
    "lib/blend-rs/blend-bindgen-rs"
]

[dependencies]
ash = "0.36.0+1.3.206"
ash-window = "0.9.1"
itertools = "0.10.3"
log = "0.4.17"
log4rs = "1.1.1"
nalgebra = "0.31.0"
png = "0.17.5"
rand = "0.8.5"
thiserror = "1.0.31"
winit = "0.26.1"

skyshard = { path = "lib/skyshard" }
blend-rs = { path = "lib/blend-rs/blend-rs", version = "0.3.0", features = ["all"] }

[dev-dependencies]
hamcrest2 = "0.3.0"
