[package]
name = "rust-vulkan-playground"
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
edition = "2021"

[workspace]
members = [
    "lib/blend-rs/blend-rs",
    "lib/blend-rs/blend-inspect-rs",
    "lib/blend-rs/blend-bindgen-rs",
    "lib/skyshard",
    "lib/skyshard/skyshard_shaders",
    "lib/skyshard/skyshard_shaders/skyshard_shaders_tests",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 2

[dependencies]
bitflags = "1.3.2" # remains at the same version as ash.
config = "0.13.3"
itertools = "0.10.5"
log = "0.4.17"
log4rs = "1.2.0"
nalgebra = "0.31.4"
png = "0.17.7"
rand = "0.8.5"
thiserror = "1.0.38"
winit = "0.27.5"

skyshard = { path = "lib/skyshard" }
skyshard_shaders = { path = "lib/skyshard/skyshard_shaders" }
blend-rs = { path = "lib/blend-rs/blend-rs", version = "0.3.0", features = ["all"] }

[dev-dependencies]
hamcrest2 = "0.3.0"
