[package]
name = "skyshard"
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
edition = "2021"

[dependencies]
ash = "0.36.0+1.3.206"
ash-window = "0.9.1"
base64 = "0.13.1"
bimap = "0.6.2"
chrono = "0.4.22"
config = "0.13.3"
gpu-allocator = "0.20.0"
log = "0.4.17"
memoffset = "0.7.1"
nalgebra = "0.31.4"
ordered-float = "3.4.0"
png = "0.17.7"
regex = "1.6.0"
syn = "1.0.103"
thiserror = "1.0.37"
winit = "0.26.1"

[dev-dependencies]
hamcrest2 = "0.3.0"
