[package]
name = "skyshard"
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
edition = "2021"

[dependencies]
ash = "0.37.1+1.3.235"
ash-window = "0.11.0"
base64 = "0.20.0"
bimap = "0.6.2"
chrono = "0.4.23"
config = "0.13.3"
gpu-allocator = "0.21.0"
log = "0.4.17"
memoffset = "0.8.0"
nalgebra = "0.31.4"
ordered-float = "3.4.0"
png = "0.17.7"
raw-window-handle = "0.4.3"
regex = "1.7.0"
syn = "1.0.107"
thiserror = "1.0.38"
winit = "0.27.5"

[dev-dependencies]
hamcrest2 = "0.3.0"
