[package]
name = "skyshard"
version = "0.1.0"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
edition = "2021"

[dependencies]
ash = "0.37.2+1.3.238"
ash-window = "0.12.0"
base64 = "0.21.0"
bimap = "0.6.3"
chrono = "0.4.24"
config = "0.13.3"
gpu-allocator = "0.22.0"
log = "0.4.17"
memoffset = "0.8.0"
nalgebra = "0.32.2"
png = "0.17.7"
raw-window-handle = "0.5.1"
thiserror = "1.0.40"
winit = "0.28.3"

[dev-dependencies]
hamcrest2 = "0.3.0"
