[package]
name = "blend-bindgen-rs"
version = "0.4.0"
description = "A Rust library to generated Blender's data structures."
readme = "README.md"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
keywords = ["blender", "blend", "generator", "gamedev", "game"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
blend-inspect-rs = { path = "../blend-inspect-rs" }
itertools = "0.10.3"
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = "1.0.98"


[dev-dependencies]
hamcrest2 = "0.3.0"
