[package]
name = "blend-bindgen-rs"
version = "0.5.0"
description = "A Rust library to generated Blender's data structures."
readme = "README.md"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
keywords = ["blender", "blend", "generator", "gamedev", "game"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
blend-inspect-rs = { path = "../blend-inspect-rs" }
itertools = "0.10.5"
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = "1.0.107"


[dev-dependencies]
hamcrest2 = "0.3.0"
