[package]
name = "blend-inspect-rs"
version = "0.1.0"
description = "A crate to inspect the structure Blender's .blend files."
readme = "README.md"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
keywords = ["blender", "blend", "parsing", "gamedev", "game"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.3"
nom = "7.1.1"
thiserror = "1.0.31"

[dev-dependencies]
hamcrest2 = "0.3.0"
