[package]
name = "blend-inspect-rs"
version = "0.3.0"
description = "A Rust library to parse and analyse Blender's .blend files."
readme = "README.md"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
keywords = ["blender", "blend", "parsing", "gamedev", "game"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
nom = "7.1.3"
thiserror = "1.0.40"

[dev-dependencies]
hamcrest2 = "0.3.0"
