[package]
name = "blend-macros-rs"
version = "0.5.0"
description = ""
readme = "README.md"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
keywords = ["blender", "blend", "generator", "gamedev", "game"]
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
blend-inspect-rs = { path = "../blend-inspect-rs" }
blend-bindgen-rs = { path = "../blend-bindgen-rs" }
itertools = "0.10.3"
proc-macro2 = "1.0.43"
proc-macro-error = "1.0.4"
quote = "1.0.21"
syn = "1.0.99"

[dev-dependencies]
hamcrest2 = "0.3.0"
