[package]
name = "blend-rs"
version = "0.3.0"
description = "A Rust library to read Blender's .blend files."
readme = "README.md"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
keywords = ["blender", "blend", "parsing", "gamedev", "game"]
license = "Apache-2.0"
edition = "2021"

[features]
default = ["blender3_0"]
blender2_7 = []
blender2_8 = []
blender2_8x86 = []
blender2_9 = []
blender3_0 = []
all = ["blender2_7", "blender2_8", "blender2_8x86", "blender2_9", "blender3_0"]

[dependencies]
blend-inspect-rs = { path = "../blend-inspect-rs" }
thiserror = "1.0.31"

[dev-dependencies]
hamcrest2 = "0.3.0"

[build-dependencies]
blend-bindgen-rs = { path = "../blend-bindgen-rs" }
