# TODO: https://blog.rust-lang.org/2022/09/22/Rust-1.64.0.html#cargo-improvements-workspace-inheritance-and-multi-target-builds

[package]
name = "blend-rs"
version = "0.3.0"
description = "A Rust library to read Blender's .blend files."
readme = "README.md"
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
keywords = ["blender", "blend", "parsing", "gamedev", "game"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[features]
default = ["blender3_2"]
blender2_79 = []
blender2_80 = []
blender2_80x86 = []
blender2_93 = []
blender3_2 = []
blender3_3 = []
all = ["blender2_79", "blender2_80", "blender2_80x86", "blender2_93", "blender3_2", "blender3_3"]

[dependencies]
blend-inspect-rs = { path = "../blend-inspect-rs" }
thiserror = "1.0.31"

[dev-dependencies]
hamcrest2 = "0.3.0"

[build-dependencies]
blend-bindgen-rs = { path = "../blend-bindgen-rs" }
